[package]
name = "stc-rs"
version = "0.1.0"
authors = ["石博文 <sbw@sbw.so>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = "*"
bitflags = "*"
once_cell = "*"

[build-dependencies]
lalrpop = "*"