[package]
name = "stc-rs"
version = "0.1.0"
authors = ["石博文 <sbw@sbw.so>"]
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lalrpop-util = { version = "*", optional = true }
bitflags = "*"
once_cell = "*"
crc = "*"
regex = "*"

[build-dependencies]
lalrpop = { version = "*", optional = true }

[features]
default = ["use_lalrpop"]
use_lalrpop = ["lalrpop", "lalrpop-util"]