[package]
name = "stc-rs"
version = "0.1.0"
authors = ["石博文 <sbw@sbw.so>"]
edition = "2018"
build = "src/build.rs"

[[bin]]
name = "stc"
path = "src/main.rs"

[dependencies]
lalrpop-util = { version = "*", optional = true }
bitflags = "*"
once_cell = "*"
crc = "*"
regex = "*"
chrono = "*"

[build-dependencies]
cbindgen = "*"
lalrpop = { version = "*", optional = true }

[features]
default = ["use_lalrpop"]
use_lalrpop = ["lalrpop", "lalrpop-util"]