[package]
name = "stc-rs"
version = "0.1.0"
authors = ["石博文 <sbw@sbw.so>"]
edition = "2021"
build = "src/build.rs"

#[[bin]]
#name = "stc"
#path = "src/main.rs"
#

[lib]
name = "stc"
path = "src/lib.rs"

[dependencies]
lalrpop-util = { version = "*", optional = true }
bitflags = "*"
once_cell = "*"
crc = "*"
regex = "*"
chrono = "*"
smallvec = { version = "*", features = ["union", "const_generics", "const_new"] }
smallmap = "*"
log = "*"
indexmap = "*"
uuid = { version = "*", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
inkwell = { version = "*", optional = true, features = ["llvm16-0-no-llvm-linking"] }

[build-dependencies]
cbindgen = "*"
lalrpop = { version = "*", optional = true }
llvm-sys = { version = "160", optional = true, features = ["prefer-dynamic"] }

[features]
default = ["use_lalrpop", "llvm_backend"]
use_lalrpop = ["lalrpop", "lalrpop-util"]
llvm_backend = ["inkwell", "llvm-sys"]
