[package]
name = "stc-rs"
version = "0.1.0"
authors = ["石博文 <sbw@sbw.so>"]
edition = "2021"
build = "src/build.rs"

[lib]
name = "stc"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "src/test_file.rs"

[dependencies]
lalrpop-util = { version = "*", optional = true }
bitflags = "*"
once_cell = "*"
crc = "*"
regex = "*"
chrono = "*"
smallvec = { version = "*", features = ["union", "const_generics", "const_new"] }
smallmap = "*"
log = "*"
indexmap = "*"
byteorder = "*"
uuid = { version = "*", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
inkwell = { version = "*", optional = true, features = ["llvm17-0-no-llvm-linking"] }
mlua = { version = "*", features = ["lua54", "macros", "async"], optional = true }

[dev-dependencies]
tempfile = "*"

[build-dependencies]
cbindgen = "*"
lalrpop = { version = "*", optional = true }
llvm-sys = { version = "170", optional = true, features = ["prefer-dynamic"] }

[features]
default = ["lua_backend", "lalrpop_parser"]
lalrpop_parser = ["lalrpop", "lalrpop-util"]
llvm_backend = ["inkwell", "llvm-sys"]
lua_backend = ["mlua"]
default_parser = []
