[package]
name = "stc-rs"
version = "0.1.0"
authors = ["石博文 <sbw@sbw.so>"]
edition = "2024"
build = "src/build.rs"

[lib]
name = "stc"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "src/test/test_file.rs"

[dependencies]
env_logger = "*"
lalrpop-util = { version = "*", optional = true }
bitflags = "*"
once_cell = "*"
crc = "*"
regex = "*"
chrono = "*"
smallvec = { version = "*", features = ["union", "const_generics", "const_new"] }
smallmap = "*"
log = "*"
indexmap = "*"
byteorder = "*"
uuid = { version = "*", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
inkwell = { version = "*", optional = true, features = ["llvm18-0-prefer-dynamic"] }
mlua = { version = "*", features = ["lua54", "macros", "async"], optional = true }
serde = { version = "*", features = ["derive"] }

[dev-dependencies]
tempfile = "*"
quick-xml = { version = "*", features = ["serialize"] }

[build-dependencies]
cbindgen = "*"
lalrpop = { version = "*", optional = true }

[features]
default = ["lua_backend", "lalrpop_parser"]
lalrpop_parser = ["lalrpop", "lalrpop-util"]
llvm_backend = ["inkwell"]
lua_backend = ["mlua"]
