[package]
name = "lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
stc-rs = { path = "../lib" }
pretty_env_logger = "*"
log = "*"
tower-lsp = { version = "*"}
tokio = { version = "*", features = ["macros", "rt-multi-thread", "io-std", "io-util", "net"] }
tokio-util = { version = "*", features = ["codec"] }
serde_json = "*"
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }