[package]
name = "viewer-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
stc-rs = { path = "../lib", features = ["llvm_backend", "use_lalrpop"] }
pretty_env_logger = "*"
log = "*"
once_cell = "*"
async-channel = "*"
quick-xml = { version = "*", features = ["serialize"] }
serde = { version = "*", features = ["derive"] }
eframe = { version = "*", features = ["default"] }
egui_extras = { version = "*", features = ["default", "image"] }