[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
stc-rs = { path = "../lib", features = ["use_lalrpop"] }
pretty_env_logger = "*"
log = "*"
gtk4 = { version = "*" }
glib = { version = "*" }
once_cell = "*"
async-channel = "*"
quick-xml = { version = "*", features = ["serialize"] }
serde = { version = "*", features = ["derive"] }
