[package]
name = "viewer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "viewer"
path = "src/bin.rs"

[dependencies]
stc-rs = { path = "../lib", default-features = false, features = ["lua_backend", "llvm_backend"] }
pretty_env_logger = "*"
log = "*"
once_cell = "*"
async-channel = "*"
quick-xml = { version = "*", features = ["serialize"] }
eframe = { version = "*", features = ["default"], optional = true }
egui_extras = { version = "*", features = ["default", "image"], optional = true }

[features]
default = ["gui-egui"]
gui-egui = ["eframe", "egui_extras"]